samples/_failures_safe/1760958831_284936_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a999c3df.c: In function ‘main’:
./samples/SAFE/__tmp_a999c3df.c:148:5: error: expected expression at end of input
  148 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_a999c3df.c:148:5: error: expected declaration or statement at end of input
